--- a/index.html
+++ b/index.html
@@ -1,3 +1,19 @@
+<!doctype html>
+<html class="no-js" lang="en-US">
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+
+  <title>ModernWeb Project #1</title>
+
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+  
 <!-- Logo + Nav -->
 <header>
 <h1 class="logo"><a href="http://workthefactory.com/"><img src="http://jeremyabrahams.github.io/mw-project-1/img/factory-logo.png" height=100 width=157 alt="The Factory">The Factory</a></h1>
@@ -213,3 +229,6 @@
   <p>38 Fulton S. West, Suite 400</p>
   <p>Grand Rapids, MI 49503</p>
 </footer>
+
+</body>
+</html>
