--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 </head>
 
 <body>
-  
-<!-- Logo + Nav -->
+
+<!-- Logo + Navigation -->
 <header>
 <h1 class="logo"><a href="http://workthefactory.com/"><img src="http://jeremyabrahams.github.io/mw-project-1/img/factory-logo.png" height=100 width=157 alt="The Factory">The Factory</a></h1>
 
