--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <nav>
   <ul class="nav">
-    <li><a class="nav-links"href=“”>Description Test</a></li>
+    <li><a class="nav-links"href=“”>Description Nav Test</a></li>
     <li><a class="nav-links"href=“”>CoLearners</a></li>
     <li><a class="nav-links"href=“”>Instructor</a></li>
     <li><a class="nav-links"href=“”>Sign Up</a></li>
