--- a/index.html
+++ b/index.html
@@ -20,20 +20,19 @@
 
 <nav>
   <ul class="nav">
-    <li><a class="nav-links"href=“”>Description Nav Test</a></li>
+    <li><a class="nav-links"href=“”>Description Test</a></li>
     <li><a class="nav-links"href=“”>CoLearners</a></li>
     <li><a class="nav-links"href=“”>Instructor</a></li>
     <li><a class="nav-links"href=“”>Sign Up</a></li>
   </ul>
 </nav>
+
 <!-- Hero -->
 <section class="hero-intro">
 <h1 class="hero-title">Modern Web</h1>
 <p class="hero-sub">Starting Sept. 2015</p>
 </section>
 </header>
-
-
 
 <!-- Intro Text -->
 <section class="intro">
