--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
 
-<!-- Logo + Navigation -->
+<!-- Logo + Nav -->
 <header>
 <h1 class="logo"><a href="http://workthefactory.com/"><img src="http://jeremyabrahams.github.io/mw-project-1/img/factory-logo.png" height=100 width=157 alt="The Factory">The Factory</a></h1>
 
