--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
 
-  <title>ModernWeb Project #1</title>
+  <title>ModernWeb Project 1</title>
 
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -14,220 +14,222 @@
 
 <body>
 
-<!-- Logo + Nav -->
-<header>
-<h1 class="logo"><a href="http://workthefactory.com/"><img src="http://jeremyabrahams.github.io/mw-project-1/img/factory-logo.png" height=100 width=157 alt="The Factory">The Factory</a></h1>
+  <!-- Logo + Nav -->
+  <header>
+  <h1 class="logo"><a href="http://workthefactory.com/"><img src="http://jeremyabrahams.github.io/mw-project-1/img/factory-logo.png" height=100 width=157 alt="The Factory">The Factory</a></h1>
 
-<nav>
-  <ul class="nav">
-    <li><a class="nav-links"href=“”>Description Test</a></li>
-    <li><a class="nav-links"href=“”>CoLearners</a></li>
-    <li><a class="nav-links"href=“”>Instructor</a></li>
-    <li><a class="nav-links"href=“”>Sign Up</a></li>
-  </ul>
-</nav>
+  <nav>
+    <ul class="nav">
+      <li><a class="nav-links"href=“”>Description1</a></li>
+      <li><a class="nav-links"href=“”>CoLearners</a></li>
+      <li><a class="nav-links"href=“”>Instructor</a></li>
+      <li><a class="nav-links"href=“”>Sign Up</a></li>
+    </ul>
+  </nav>
+  <!-- Hero -->
+  <section class="hero-intro">
+  <h1 class="hero-title">Modern Web</h1>
+  <p class="hero-sub">Starting Sept. 2015</p>
+  </section>
+  </header>
 
-<!-- Hero -->
-<section class="hero-intro">
-<h1 class="hero-title">Modern Web</h1>
-<p class="hero-sub">Starting Sept. 2015</p>
-</section>
-</header>
 
-<!-- Intro Text -->
-<section class="intro">
-  <p>HTML and CSS are only part of the picture. The modern front-end developer will also need to be versed in version control, task automators, preprocessors, frameworks, the command line, and more.</p>
-  <img id="divider" src="http://jeremyabrahams.github.io/mw-project-1/img/divider.png" alt="Section Divider">
-</section>
 
-<!-- Course Goals -->
-<section id="course-goals" class="course-goals">
-  <h1 class="course-goals-title">Course Goals</h1>
-  <ul class="course-goals-list">
-    <li class="goals">
-      <h2 class="goals-sub">Semantic HTML</h2>
-        <p>You'll learn how to structure your pages using the minimum elements necessary. With an eye on semantics, you'll also learn how new HTML5 elements describe a page's structure more clearly and concisely to the browser and assistive technologies.</p>
-    </li>
-    <li>
-      <h2 class="goals-sub">CSS</h2>
-        <p>CSS3 and modern browsers have given us a whole new set of tools. You’ll learn some best practices for writing CSS and how to mindfully take advantage of new properties to create beautiful layouts.</p>
-    </li>
-    <li>
-      <h2 class="goals-sub">SASS</h2>
-        <p>You'll learn why front-end developers love CSS preproccesors like SASS. By extending CSS with familiar programming mainstays like variables, functions, and equations, SASS has reinvented the workflow of writing CSS.</p>
-    </li>
-    <li>
-      <h2 class="goals-sub">Responsive Design</h2>
-        <p>The goal of responsive design is to provide the best experience on every device. We'll discuss the best way to set breakpoints and how to make sure your images look great and load fast.</p>
-    </li>
-    <li>
-      <h2 class="goals-sub">Javascript / jQuery</h2>
-        <p>You'll learn how javascript and jquery can provide necessary interaction for your sites and what frameworks and libraries are essential tools for the modern front-end developer.</p>
-    </li>
-    <li>
-      <h2 class="goals-sub">Version Control &amp; Task Automators</h2>
-        <p>Get up and running with Git. You'll learn how to integrate version control into your workflow and how to contribute to a code repository. You’ll also learn the power of task automators.</p>
-    </li>
-  </ul>
-</section>
+  <!-- Intro Text -->
+  <section class="intro">
+    <p>HTML and CSS are only part of the picture. The modern front-end developer will also need to be versed in version control, task automators, preprocessors, frameworks, the command line, and more.</p>
+    <img id="divider" src="http://jeremyabrahams.github.io/mw-project-1/img/divider.png" alt="Section Divider">
+  </section>
 
-<!-- CoLearners -->
-<section class="co-learning">
-  <h1 class="co-learners-title">Meet the CoLearners</h1>
-  <ul class="co-learners">
-    <li>
-    <img class="photo" src="http://jeremyabrahams.github.io/mw-project-1/img/colearner-f1.jpg" alt="A photo of Adam">
-    <h2 class="name">Adam Osman</h2>
-      <ul class="social-links">
-      <li><a href="" class="facebook">facebook</a></li>
-      <li><a href="" class="twitter">twitter</a></li>
-      </ul>
-    </li>
+  <!-- Course Goals -->
+  <section id="course-goals" class="course-goals">
+    <h1 class="course-goals-title">Course Goals</h1>
+    <ul class="course-goals-list">
+      <li class="goals">
+        <h2 class="goals-sub">Semantic HTML</h2>
+          <p>You'll learn how to structure your pages using the minimum elements necessary. With an eye on semantics, you'll also learn how new HTML5 elements describe a page's structure more clearly and concisely to the browser and assistive technologies.</p>
+      </li>
+      <li>
+        <h2 class="goals-sub">CSS</h2>
+          <p>CSS3 and modern browsers have given us a whole new set of tools. You’ll learn some best practices for writing CSS and how to mindfully take advantage of new properties to create beautiful layouts.</p>
+      </li>
+      <li>
+        <h2 class="goals-sub">SASS</h2>
+          <p>You'll learn why front-end developers love CSS preproccesors like SASS. By extending CSS with familiar programming mainstays like variables, functions, and equations, SASS has reinvented the workflow of writing CSS.</p>
+      </li>
+      <li>
+        <h2 class="goals-sub">Responsive Design</h2>
+          <p>The goal of responsive design is to provide the best experience on every device. We'll discuss the best way to set breakpoints and how to make sure your images look great and load fast.</p>
+      </li>
+      <li>
+        <h2 class="goals-sub">Javascript / jQuery</h2>
+          <p>You'll learn how javascript and jquery can provide necessary interaction for your sites and what frameworks and libraries are essential tools for the modern front-end developer.</p>
+      </li>
+      <li>
+        <h2 class="goals-sub">Version Control &amp; Task Automators</h2>
+          <p>Get up and running with Git. You'll learn how to integrate version control into your workflow and how to contribute to a code repository. You’ll also learn the power of task automators.</p>
+      </li>
+    </ul>
+  </section>
 
-    <li>
-    <img class="photo" src="http://jeremyabrahams.github.io/mw-project-1/img/colearner-f2.jpg">
-    <h2 class="name">Amelie MacDonald</h2>
-      <ul class="social-links">
-      <li><a href="" class="facebook">facebook</a></li>
-      <li><a href="" class="twitter">twitter</a></li>
-      </ul>
-    </li>
+  <!-- CoLearners -->
+  <section class="co-learning">
+    <h1 class="co-learners-title">Meet the CoLearners</h1>
+    <ul class="co-learners">
+      <li>
+      <img class="photo" src="http://jeremyabrahams.github.io/mw-project-1/img/colearner-f1.jpg" alt="A photo of Adam">
+      <h2 class="name">Adam Osman</h2>
+        <ul class="social-links">
+        <li><a href="" class="facebook">facebook</a></li>
+        <li><a href="" class="twitter">twitter</a></li>
+        </ul>
+      </li>
 
-    <li>
-    <img class="photo" src="http://jeremyabrahams.github.io/mw-project-1/img/colearner-m1.jpg" alt="A photo of Andrew">
-    <h2 class="name">Andrew Bentzen</h2>
-      <ul class="social-links">
-      <li><a href="" class="facebook">facebook</a></li>
-      <li><a href="" class="twitter">twitter</a></li>
-      </ul>
-    </li>
+      <li>
+      <img class="photo" src="http://jeremyabrahams.github.io/mw-project-1/img/colearner-f2.jpg">
+      <h2 class="name">Amelie MacDonald</h2>
+        <ul class="social-links">
+        <li><a href="" class="facebook">facebook</a></li>
+        <li><a href="" class="twitter">twitter</a></li>
+        </ul>
+      </li>
 
-    <li>
-    <img class="photo" src="http://jeremyabrahams.github.io/mw-project-1/img/colearner-m2.jpg">
-    <h2 class="name">Brent Forwood</h2>
-      <ul class="social-links">
-      <li><a href="" class="facebook">facebook</a></li>
-      <li><a href="" class="twitter">twitter</a></li>
-      </ul>
-    </li>
+      <li>
+      <img class="photo" src="http://jeremyabrahams.github.io/mw-project-1/img/colearner-m1.jpg" alt="A photo of Andrew">
+      <h2 class="name">Andrew Bentzen</h2>
+        <ul class="social-links">
+        <li><a href="" class="facebook">facebook</a></li>
+        <li><a href="" class="twitter">twitter</a></li>
+        </ul>
+      </li>
 
-    <li>
-    <img class="photo" src="http://placehold.it/200x200" alt="A photo of Chris">
-    <h2 class="name">Chris Hashley</h2>
-      <ul class="social-links">
-      <li><a href="" class="facebook">facebook</a></li>
-      <li><a href="" class="twitter">twitter</a></li>
-      </ul>
-    </li>
+      <li>
+      <img class="photo" src="http://jeremyabrahams.github.io/mw-project-1/img/colearner-m2.jpg">
+      <h2 class="name">Brent Forwood</h2>
+        <ul class="social-links">
+        <li><a href="" class="facebook">facebook</a></li>
+        <li><a href="" class="twitter">twitter</a></li>
+        </ul>
+      </li>
 
-    <li>
-    <img class="photo" src="http://placehold.it/200x200" alt="A photo of Frances">
-    <h2 class="name">Frances Close</h2>
-      <ul class="social-links">
-      <li><a href="" class="facebook">facebook</a></li>
-      <li><a href="" class="twitter">twitter</a></li>
-      </ul>
-    </li>
+      <li>
+      <img class="photo" src="http://placehold.it/200x200" alt="A photo of Chris">
+      <h2 class="name">Chris Hashley</h2>
+        <ul class="social-links">
+        <li><a href="" class="facebook">facebook</a></li>
+        <li><a href="" class="twitter">twitter</a></li>
+        </ul>
+      </li>
 
-    <li>
-    <img class="photo" src="http://placehold.it/200x200" alt="A photo of Jon">
-    <h2 class="name">Jon Neil</h2>
-      <ul class="social-links">
-      <li><a href="" class="facebook">facebook</a></li>
-      <li><a href="" class="twitter">twitter</a></li>
-      </ul>
-    </li>
+      <li>
+      <img class="photo" src="http://placehold.it/200x200" alt="A photo of Frances">
+      <h2 class="name">Frances Close</h2>
+        <ul class="social-links">
+        <li><a href="" class="facebook">facebook</a></li>
+        <li><a href="" class="twitter">twitter</a></li>
+        </ul>
+      </li>
 
-    <li>
-    <img class="photo" src="http://placehold.it/200x200" alt="A photo of Leanna">
-    <h2 class="name">Leanna Pelham</h2>
-      <ul class="social-links">
-      <li><a href="" class="facebook">facebook</a></li>
-      <li><a href="" class="twitter">twitter</a></li>
-      </ul>
-    </li>
+      <li>
+      <img class="photo" src="http://placehold.it/200x200" alt="A photo of Jon">
+      <h2 class="name">Jon Neil</h2>
+        <ul class="social-links">
+        <li><a href="" class="facebook">facebook</a></li>
+        <li><a href="" class="twitter">twitter</a></li>
+        </ul>
+      </li>
 
-    <li>
-    <img class="photo" src="http://placehold.it/200x200" alt="A photo of Pam">
-    <h2 class="name">Pam Henson</h2>
-      <ul class="social-links">
-      <li><a href="" class="facebook">facebook</a></li>
-      <li><a href="" class="twitter">twitter</a></li>
-      </ul>
-    </li>
+      <li>
+      <img class="photo" src="http://placehold.it/200x200" alt="A photo of Leanna">
+      <h2 class="name">Leanna Pelham</h2>
+        <ul class="social-links">
+        <li><a href="" class="facebook">facebook</a></li>
+        <li><a href="" class="twitter">twitter</a></li>
+        </ul>
+      </li>
 
-    <li>
-    <img class="photo" src="http://placehold.it/200x200" alt="A photo of Sam">
-    <h2 class="name">Sam Scholtens</h2>
-      <ul class="social-links">
-      <li><a href="" class="facebook">facebook</a></li>
-      <li><a href="" class="twitter">twitter</a></li>
-      </ul>
-    </li>
+      <li>
+      <img class="photo" src="http://placehold.it/200x200" alt="A photo of Pam">
+      <h2 class="name">Pam Henson</h2>
+        <ul class="social-links">
+        <li><a href="" class="facebook">facebook</a></li>
+        <li><a href="" class="twitter">twitter</a></li>
+        </ul>
+      </li>
 
-    <li>
-    <img class="photo" src="http://placehold.it/200x200" alt="A photo of Sarah">
-    <h2 class="name">Sarah Sipple</h2>
-      <ul class="social-links">
-      <li><a href="" class="facebook">facebook</a></li>
-      <li><a href="" class="twitter">twitter</a></li>
-      </ul>
-    </li>
+      <li>
+      <img class="photo" src="http://placehold.it/200x200" alt="A photo of Sam">
+      <h2 class="name">Sam Scholtens</h2>
+        <ul class="social-links">
+        <li><a href="" class="facebook">facebook</a></li>
+        <li><a href="" class="twitter">twitter</a></li>
+        </ul>
+      </li>
 
-    <li>
-    <img class="photo" src="http://placehold.it/200x200" alt="A photo of Tyler">
-    <h2 class="name">Tyler Wayner</h2>
-      <ul class="social-links">
-      <li><a href="" class="facebook">facebook</a></li>
-      <li><a href="" class="twitter">twitter</a></li>
-      </ul>
-    </li>
-  </ul>
-</section>
+      <li>
+      <img class="photo" src="http://placehold.it/200x200" alt="A photo of Sarah">
+      <h2 class="name">Sarah Sipple</h2>
+        <ul class="social-links">
+        <li><a href="" class="facebook">facebook</a></li>
+        <li><a href="" class="twitter">twitter</a></li>
+        </ul>
+      </li>
 
-<!-- Instructor -->
-<article class="instructor-wrap">
-  <img class="instructor-bg" src="http://jeremyabrahams.github.io/mw-project-1/img/instructor.jpg" alt="A photo of Jeremy Abrahams">
-  <div class="instructor-info">
-  <h1 class="instructor">Meet the Instructor<h1>
-  <h2 class="instructor-name">Jeremy Abrahams</h2>
-  <p class="instructor-company">Mighty in the Midwest</p>
-  <p class="instructor-bio">Design and Front-End Development are a huge part of my life. Some of my
-  other passions include music, my record collection, typography, UX, local
-  craft beer and food, and most of all, my wife. I'm a previous coLearning
-  graduate and full-time developer at Mighty.</p>
-  </div>
-</article>
+      <li>
+      <img class="photo" src="http://placehold.it/200x200" alt="A photo of Tyler">
+      <h2 class="name">Tyler Wayner</h2>
+        <ul class="social-links">
+        <li><a href="" class="facebook">facebook</a></li>
+        <li><a href="" class="twitter">twitter</a></li>
+        </ul>
+      </li>
+    </ul>
+  </section>
 
-<!-- Quote -->
-<figure class="quote">
-  <blockquote class="quote-text">
-    <p>The ability to learn in-person from an expert instructor as well as work
-    alongside other peers in the area is invaluable.</p>
-  </blockquote>
-  <figcaption class="quote-name">Adam DeLong <span class="quote-title">coLearner and graduate of</span> <a class="quote-link" href="#">Intro to Ruby</a></figcaption>
-</figure>
+  <!-- Instructor -->
+  <article class="instructor-wrap">
+    <img class="instructor-bg" src="http://jeremyabrahams.github.io/mw-project-1/img/instructor.jpg" alt="A photo of Jeremy Abrahams">
+    <div class="instructor-info">
+    <h1 class="instructor">Meet the Instructor<h1>
+    <h2 class="instructor-name">Jeremy Abrahams</h2>
+    <p class="instructor-company">Mighty in the Midwest</p>
+    <p class="instructor-bio">Design and Front-End Development are a huge part of my life. Some of my
+    other passions include music, my record collection, typography, UX, local
+    craft beer and food, and most of all, my wife. I'm a previous coLearning
+    graduate and full-time developer at Mighty.</p>
+    </div>
+  </article>
 
-<!-- Details -->
-<section class="details">
-  <h1 class="course-details">Course Details</h1>
-  <ul class="details-list">
-    <li>Sept 14th–Nov 30th</li>
-    <li>Every Mon 6pm–8:30</li>
-    <li>Orientation: Sept 9th</li>
-    <li>Graduation: Dec 9th</li>
-    <li>Class size: 20 students</li>
-    <li>Cost: $800</li>
-  </ul>
+  <!-- Quote -->
+  <figure class="quote">
+    <blockquote class="quote-text">
+      <p>The ability to learn in-person from an expert instructor as well as work
+      alongside other peers in the area is invaluable.</p>
+    </blockquote>
+    <figcaption class="quote-name">Adam DeLong <span class="quote-title">coLearner and graduate of</span> <a class="quote-link" href="#">Intro to Ruby</a></figcaption>
+  </figure>
 
-  <button class="sign-up-button">Sign Up</button>
+  <!-- Details -->
+  <section class="details">
+    <h1 class="course-details">Course Details</h1>
+    <ul class="details-list">
+      <li>Sept 14th–Nov 30th</li>
+      <li>Every Mon 6pm–8:30</li>
+      <li>Orientation: Sept 9th</li>
+      <li>Graduation: Dec 9th</li>
+      <li>Class size: 20 students</li>
+      <li>Cost: $800</li>
+    </ul>
 
-<!-- Footer -->
-<footer>
-  <h1 class="footer-logo"><a href="http://workthefactory.com/"><img src="http://jeremyabrahams.github.io/mw-project-1/img/factory-logo.png" height=65 width=100 alt="The Factory">The Factory</a></h1>
-  <p>38 Fulton S. West, Suite 400</p>
-  <p>Grand Rapids, MI 49503</p>
-</footer>
+    <button class="sign-up-button">Sign Up</button>
+
+  <!-- Footer -->
+  <footer>
+    <h1 class="footer-logo"><a href="http://workthefactory.com/"><img src="http://jeremyabrahams.github.io/mw-project-1/img/factory-logo.png" height=65 width=100 alt="The Factory">The Factory</a></h1>
+    <p>38 Fulton S. West, Suite 400</p>
+    <p>Grand Rapids, MI 49503</p>
+  </footer>
+
 
 </body>
 </html>
