--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <nav>
     <ul class="nav">
-      <li><a class="nav-links"href=“”>Description1</a></li>
+      <li><a class="nav-links"href=“”>Description</a></li>
       <li><a class="nav-links"href=“”>CoLearners</a></li>
       <li><a class="nav-links"href=“”>Instructor</a></li>
       <li><a class="nav-links"href=“”>Sign Up</a></li>
