clarify to header-wrap

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 
   <!-- Logo + Nav -->
-  <header>
+  <header class="header-wrap">
   <h1 class="logo"><a href="http://workthefactory.com/"><img src="http://jeremyabrahams.github.io/mw-project-1/img/factory-logo.png" height=100 width=157 alt="The Factory">The Factory</a></h1>
 
   <nav>
