--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
   <!-- Course Goals -->
   <section id="course-goals" class="course-goals">
-    <h1>Course Goals</h1>
+    <h1 class="course-goals-title">Course Goals</h1>
     <ul class="course-goals-list">
       <li class="goals">
         <h2 class="goals-sub">Semantic HTML</h2>
