--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
       <li>Every Mon 6pm–8:30</li>
       <li>Orientation: Sept 9th</li>
       <li>Graduation: Dec 9th</li>
-      <li>Class size: 20 students</li>
+      <li class='class-size'>Class size: 20 students</li>
       <li>Cost: $800</li>
     </ul>
 
