--- a/index.html
+++ b/index.html
@@ -202,12 +202,11 @@
   </article>
 
   <!-- Quote -->
-  <figure class="quote">
-    <blockquote class="quote-text">
-      <p>The ability to learn in-person from an expert instructor as well as work
-      alongside other peers in the area is invaluable.</p>
+  <figure class="blockquote">
+    <blockquote>
+      <p class="quote">"The ability to learn in-person from an expert instructor as well as work alonside other peers in the area is invaluable."</p>
     </blockquote>
-    <figcaption class="quote-name">Adam DeLong <span class="quote-title">coLearner and graduate of</span> <a class="quote-link" href="#">Intro to Ruby</a></figcaption>
+    <figcaption class="quoted">Adam Delong <span class="quoted-details">coLearner and graduate of <a class="quoted-details-link" href="#">Intro to Ruby</a></span></figcaption>
   </figure>
 
   <!-- Details -->
