--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   </section>
 
   <!-- CoLearners -->
-  <section class="co-learning">
+  <section class="co-learners">
     <h1 class="co-learners-title">Meet the CoLearners</h1>
     <ul class="co-learners">
       <li>
