--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 
 <body>
 
-  <!-- Logo + Nav -->
-  <header class="header-wrap">
+<!-- Logo + Nav -->
+<header class="header-wrap">
   <h1 class="logo"><a href="http://workthefactory.com/"><img src="http://jeremyabrahams.github.io/mw-project-1/img/factory-logo.png" height=100 width=157 alt="The Factory">The Factory</a></h1>
 
   <nav>
@@ -45,12 +45,12 @@
   <h1 class="hero-title">Modern Web</h1>
   <p class="hero-sub">Starting Sept. 2015</p>
   </section>
-  </header>
+</header>
 
 
 
-  <!-- Intro Text -->
-  <section class="intro">
+<!-- Intro Text -->
+<section class="intro">
     <p>HTML and CSS are only part of the picture. The modern front-end developer will also need to be versed in version control, task automators, preprocessors, frameworks, the command line, and more.</p>
     <img id="divider" src="http://jeremyabrahams.github.io/mw-project-1/img/divider.png" alt="Section Divider">
   </section>
@@ -84,10 +84,10 @@
           <p>Get up and running with Git. You'll learn how to integrate version control into your workflow and how to contribute to a code repository. You’ll also learn the power of task automators.</p>
       </li>
     </ul>
-  </section>
+</section>
 
-  <!-- CoLearners -->
-  <section class="co-learners">
+<!-- CoLearners -->
+<section class="co-learners">
     <h1 class="co-learners-title">Meet the CoLearners</h1>
     <ul class="co-learners">
       <li>
@@ -198,10 +198,10 @@
         </ul>
       </li>
     </ul>
-  </section>
+</section>
 
   <!-- Instructor -->
-  <article class="instructor-wrap">
+<article class="instructor-wrap">
     <img class="instructor-bg" src="http://jeremyabrahams.github.io/mw-project-1/img/instructor.jpg" alt="A photo of Jeremy Abrahams">
     <div class="instructor-info">
     <h1 class="instructor">Meet the Instructor<h1>
@@ -212,18 +212,18 @@
     craft beer and food, and most of all, my wife. I'm a previous coLearning
     graduate and full-time developer at Mighty.</p>
     </div>
-  </article>
+</article>
 
   <!-- Quote -->
-  <figure class="blockquote">
+<figure class="blockquote">
     <blockquote>
       <p class="quote">"The ability to learn in-person from an expert instructor as well as work alonside other peers in the area is invaluable."</p>
     </blockquote>
     <figcaption class="quoted">Adam Delong <span class="quoted-details">coLearner and graduate of <a class="quoted-details-link" href="#">Intro to Ruby</a></span></figcaption>
-  </figure>
+</figure>
 
-  <!-- Details -->
-  <section class="details">
+<!-- Details -->
+<section class="details">
     <h1 class="course-details">Course Details</h1>
     <ul class="details-list">
       <li>Sept 14th–Nov 30th</li>
@@ -236,12 +236,20 @@
 
     <button class="sign-up-button">Sign Up</button>
 
-  <!-- Footer -->
-  <footer>
+<div>
     <h1 class="footer-logo"><a href="http://workthefactory.com/"><img src="http://jeremyabrahams.github.io/mw-project-1/img/factory-logo.png" height=65 width=100 alt="The Factory">The Factory</a></h1>
     <p>38 Fulton S. West, Suite 400</p>
     <p>Grand Rapids, MI 49503</p>
-  </footer>
+</div>
+
+</section>
+
+<!-- Footer -->
+<!-- <footer>
+    <h1 class="footer-logo"><a href="http://workthefactory.com/"><img src="http://jeremyabrahams.github.io/mw-project-1/img/factory-logo.png" height=65 width=100 alt="The Factory">The Factory</a></h1>
+    <p>38 Fulton S. West, Suite 400</p>
+    <p>Grand Rapids, MI 49503</p>
+</footer> -->
 
 
 </body>
