--- a/index.html
+++ b/index.html
@@ -236,20 +236,15 @@
 
     <button class="sign-up-button">Sign Up</button>
 
-<!-- <div>
+<div>
     <h1 class="footer-logo"><a href="http://workthefactory.com/"><img src="http://jeremyabrahams.github.io/mw-project-1/img/factory-logo.png" height=65 width=100 alt="The Factory">The Factory</a></h1>
     <p>38 Fulton S. West, Suite 400</p>
     <p>Grand Rapids, MI 49503</p>
-</div> -->
+</div>
 
 </section>
 
-<!-- Footer -->
-<!-- <footer>
-    <h1 class="footer-logo"><a href="http://workthefactory.com/"><img src="http://jeremyabrahams.github.io/mw-project-1/img/factory-logo.png" height=65 width=100 alt="The Factory">The Factory</a></h1>
-    <p>38 Fulton S. West, Suite 400</p>
-    <p>Grand Rapids, MI 49503</p>
-</footer> -->
+
 
 
 </body>
